Add run script to baseimage